--- a/floridaimportdotnet/ClientApp/package.json
+++ b/floridaimportdotnet/ClientApp/package.json
@@ -29,6 +29,7 @@
     "bootstrap-icons": "^1.0.0-alpha3",
     "core-js": "^3.3.3",
     "jquery": "3.4.1",
+    "moment": "^2.26.0",
     "oidc-client": "^1.9.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
