--- a/floridaimportdotnet/ClientApp/package.json
+++ b/floridaimportdotnet/ClientApp/package.json
@@ -25,10 +25,12 @@
     "@aspnet/signalr": "^1.1.4",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
     "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "angularfire2": "^5.4.2",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.3.1",
     "bootstrap-icons": "^1.0.0-alpha3",
     "core-js": "^3.3.3",
+    "firebase": "^7.20.0",
     "jquery": "3.4.1",
     "moment": "^2.26.0",
     "oidc-client": "^1.9.1",
